# simulation

./: README.md  package.xml
first_leg/: CMakeLists.txt  package.xml
first_leg/launch/: nodes.launch  saved_config.rviz  urdf_gazebo.launch  urdf_gazebo_noslider.launch  urdf_rviz.launch  urdf_rviz_noslider.launch
first_leg/mesh/: calf.STL  calf.dae
first_leg/scripts/: Hopper1D.py  VPend.py  c_m.py  calf.py  circule_inv_kin.py  command.py  command_slider.py  controller_manage.py  foot_contact.py  hip.py  home.py  inv_kin_node.py  inv_sin_node-from robot.py  inv_sin_node.py  jacobian.py  legRBDL.py  legRBDL.urdf  leg_RBDL.urdf  line_inv_kin_node.py  node.py  (+6 more)
icheetah_config/: CMakeLists.txt  package.xml
icheetah_config/config/joints/: joints.yaml  joints_slider.yaml
icheetah_config/config/links/: links.yaml
icheetah_config/config/ros_control/: leg_control.yaml  leg_effort.yaml  ros_control.yaml
icheetah_config/launch/: leg_control.launch
launch/: leg_effort_gazebo.launch  leg_rviz.launch  slip_position.launch
monoped/: CMakeLists.txt
my_msgs/: CMakeLists.txt  package.xml
python_simulation/: AnimFunction.py  PhyParam.py  Utils.py  functions.py  grf_for_bounding.mat  leg_controlclass.py  leg_importmodel.py  leg_robotclass.py  leg_tasksetclass.py  param.lua  test_GRF_shaping.py  test_anim.py
robot/: CMakeLists.txt  package.xml
scripts/: control_matlab.py  legRBDL.urdf  leg_RBDL.urdf  plot_test.py  robot_class.py  sim_to_robot.py  sub_to_image.py  test_cpp.cpp  test_cubic.py  test_position.py
urdf/: leg.urdf  leg_RBDL.urdf  leg_no_slider.urdf
(+13 files in other folders)
